Fix piechart visibility

--- a/client/components/OverviewPage/OverviewPage.scss
+++ b/client/components/OverviewPage/OverviewPage.scss
@@ -35,7 +35,7 @@ $METADOCTORAL_COUNT: 9;
   display: grid;
   grid-template-columns: 4fr 1fr repeat($METAEVALUATION_COUNT, 1fr) 1fr;
   grid-auto-columns: 50px;
-  grid-template-rows: 160px 70px;
+  grid-template-rows: 270px 70px;
   grid-auto-rows: 50px;
   grid-row-gap: 25px;
   grid-column-gap: 5px;
@@ -46,7 +46,7 @@ $METADOCTORAL_COUNT: 9;
   display: grid;
   grid-template-columns: 4fr 1fr repeat($METADOCTORAL_COUNT, 1fr) 1fr;
   grid-auto-columns: 50px;
-  grid-template-rows: 160px 70px;
+  grid-template-rows: 270px 70px;
   grid-auto-rows: 50px;
   grid-row-gap: 25px;
   grid-column-gap: 5px;
